fix: updated domain

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#getInTouch" class="email">moc.gnitlusnoc-holednuh@nailuj</a>
+										<a href="#getInTouch" class="email">hc.gnitlusnoc-holednuh@nailuj</a>
 									</li>
 								</ul>
 							</div>
