fix: contact form with indicator

--- a/index.html
+++ b/index.html
@@ -458,7 +458,15 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" id="Submit" value="Send Message" disabled /></li>
+									<li>
+										<button type="submit" class="button" id="Submit" disabled>
+											<span>Send message</span>
+											<span class="loading">
+												Sending message
+												<i class="fa fa-circle-o-notch fa-spin"></i>
+											</span>
+										</button>
+									</li>
 								</ul>
 							</div>
 							<div class="4u$ 12u$(small)">
