--- a/index.html
+++ b/index.html
@@ -59,16 +59,8 @@
 						</header>
 						<p>
 							I have been with <a href="http://www.sap.com/">SAP SE</a> in <abbr title="Customer Relationship Management">CRM</abbr>, User Experience and Mobility consulting for 9 years.
-							Additionaly since 2000 I have gained deep experience in a variety of web technologies and numerous projects with different teams and different company sizes.
+							Additionally, since 2000 I have gained deep experience in a variety of web technologies and numerous projects with different teams and different company sizes.
 							Given this broad skill set I can support you along the whole implementation cycle - from the definition of architecture and coaching of developers to the safe deployment of applications in production.
-							<!--
-							Given this broad skill set I can help you to answer architectural questions, implement applications down to the detail or lead a team of developers for you.
-
-							Furthermore consider all other relevant aspects: performance optimization, security, deployment optimization
-							My focus is on the efficient implementation of user friendly applications in a wide variety of technologies.
-							During the last 16 years I worked on numerous SAP and non-SAP projects in different teams and different company sizes where I gained extensive experience.
-								Furthermore I worked as a trainer for Fiori/UI5 and SAP CRM WebUI developments on an national but as well international level.
-							!-->
 						</p>
 
 						<header class="major">
@@ -78,7 +70,7 @@
 						</header>
 
 						<ul class="ellipsis">
-							<li>a SAP expert with excellent cross functional skills to implement ABAP or SAP Fiori applications?</li>
+							<li>an SAP expert with excellent cross-functional skills to implement ABAP or SAP Fiori applications?</li>
 							<li>a coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform implementations?</li>
 							<li>a JavaScript expert that knows how to implement performant client but as well server applications?</li>
 							<li>a lead developer that can guide a team of (distributed) developers?</li>
@@ -502,7 +494,6 @@
 						<li><a href="#getInTouch" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>Made with <span class="icon fa-heart heart"></span> in Basel (Switzerland)</li>
 						<li>&copy; hundeloh consulting 2017</li>
 					</ul>
 				</div>
@@ -526,7 +517,6 @@
 
 			ga('create', 'UA-96212909-1', 'auto');
 			ga('send', 'pageview');
-
 			</script>
 	</body>
 </html>
