--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 						<ul class="ellipsis">
 							<li>an SAP expert with excellent cross-functional skills to implement ABAP or SAP Fiori applications?</li>
-							<li>a coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform implementations?</li>
+							<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform implementations?</li>
 							<li>a JavaScript expert that knows how to implement performant client but as well server applications?</li>
 							<li>a lead developer that can guide a team of (distributed) developers?</li>
 							<li>a cross topic expert that can identify performance or security potential in your applications?</li>
