--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<title>hundeloh consulting - SAP and web expertise</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        	<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -374,7 +374,7 @@
 								<h3>AP Invoice Processing</h3>
 								<p>
 									<strong>Lead Developer</strong> of a lighthouse project that combines SAP Fiori and SAP Screen Personas in parallel in order to increase the efficiency of the invoice processing processes at the largest food company in the world.
-									Additionally Smart Business applications with custom SAP HANA views were developed.
+									Additionally, Smart Business applications with custom SAP HANA views were developed.
 								</p>
 							</article>
 
@@ -510,13 +510,13 @@
 			<script src="assets/js/main.js"></script>
 
 			<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-96212909-1', 'auto');
-			ga('send', 'pageview');
+				ga('create', 'UA-96212909-1', 'auto');
+				ga('send', 'pageview');
 			</script>
 	</body>
 </html>
