--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 							</h2>
 						</header>
 						<p>
-							I have been with <a href="http://www.sap.com/">SAP SE</a> in <abbr title="Customer Relationship Management">CRM</abbr>, User Experience and Mobility consulting for 9 years.
-							Additionally, since 2000 I have gained deep experience in a variety of web technologies and numerous projects with different teams and different company sizes.
-							Given this broad skill set I can support you along the whole implementation cycle - from the definition of architecture and coaching of developers to the safe deployment of applications in production.
+							I am a strong team player who was with <a href="http://www.sap.com/">SAP SE</a> in <abbr title="Customer Relationship Management">CRM</abbr>, User Experience and Mobility consulting with a track record of successful delivery in many industries for 9 years.
+							Since 2000 I have gained deep experience in a variety of web technologies and numerous projects with intercultural teams and different company sizes.
+							Given this broad skill set I can support you along the whole implementation cycle - from the definition of architecture and actual development to testing, end-user training and safe deployment in production.
+							As technical skills alone are not the key to success I am a vigorous proponent of open communication during all stages of projects.  
 						</p>
 
 						<header class="major">
@@ -70,11 +71,12 @@
 						</header>
 
 						<ul class="ellipsis">
-							<li>an SAP expert with excellent cross-functional skills to implement ABAP or SAP Fiori applications?</li>
-							<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform implementations?</li>
-							<li>a JavaScript expert that knows how to implement performant client but as well server applications?</li>
-							<li>a lead developer that can guide a team of (distributed) developers?</li>
-							<li>a cross topic expert that can identify performance or security potential in your applications?</li>
+							<li>a lead developer who can guide a team of (distributed) developers to success while communicating the project status clearly?</li>
+							<li>an SAP expert with excellent cross-functional skills to conceptualize and implement ABAP or SAP Fiori applications in a team or alone?</li>
+							<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform implementations who helps your team to get into gear?</li>
+							<li>a trainer for developer or end-user trainings?</li>
+							<li>a JavaScript expert who knows how to implement performant client but as well server applications?</li>
+							<li>a cross topic expert who can identify performance or security potential in your applications?</li>
 						</ul>
 
 						<p>
