--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 							</h2>
 						</header>
 						<p>
-							I am a strong team player who was with <a href="http://www.sap.com/">SAP SE</a> in <abbr title="Customer Relationship Management">CRM</abbr>, User Experience and Mobility consulting with a track record of successful delivery in many industries for 9 years.
-							Since 2000 I have gained deep experience in a variety of web technologies and numerous projects with intercultural teams and different company sizes.
+							I am a strong team player who was with <a href="http://www.sap.com/">SAP SE</a> in <abbr title="Customer Relationship Management">CRM</abbr>, User Experience and Mobility consulting for 9 years.
+							Since 2000 I have gained deep experience in a variety of technologies and numerous projects with intercultural teams and different company sizes.
 							Given this broad skill set I can support you along the whole implementation cycle - from the definition of architecture and actual development to testing, end-user training and safe deployment in production.
 							As technical skills alone are not the key to success I am a vigorous proponent of open communication during all stages of projects.  
 						</p>
