--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 						<ul class="ellipsis">
 							<li>a lead developer who can guide a team of (distributed) developers to success while communicating the project status clearly?</li>
-							<li>an SAP expert with excellent cross-functional skills to conceptualize and implement ABAP or SAP Fiori applications in a team or alone?</li>
-							<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform implementations who helps your team to get into gear?</li>
+							<li>an SAP expert with excellent cross-functional skills to conceptualize and implement applications in a team or alone?</li>
+							<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform who helps your team to get into gear?</li>
 							<li>a trainer for developer or end-user trainings?</li>
 							<li>a JavaScript expert who knows how to implement performant client but as well server applications?</li>
 							<li>a cross topic expert who can identify performance or security potential in your applications?</li>
