--- a/index.html
+++ b/index.html
@@ -366,6 +366,109 @@
 						</div>
 					</section>
 
+					<section id="Web">
+						<header class="major">
+							<h2>Web skills&amp;experience</h2>
+						</header>
+
+						<h3>Languages</h3>
+						<div class="row">
+							<article class="12u 12u$(xsmall) rating-container">
+								<ul>
+									<li>
+										JavaScript (incl. ES6)
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										HTML
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										CSS (incl. LESS and SASS)
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										SQL
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										PHP
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										C#
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										Visual Basic
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										Java
+
+										<div class="rating intermediate">
+											intermediate
+										</div>
+									</li>
+								</ul>
+							</article>
+						</div>
+
+					<section id="Languages">
+						<header class="major">
+							<h2>Languages</h2>
+						</header>
+
+						<div class="row">
+							<article class="12u 12u$(xsmall) rating-container">
+								<ul>
+									<li>
+										german
+
+										<div class="rating expert">
+											native
+										</div>
+									</li>
+									<li>
+										english
+
+										<div class="rating expert">
+											advanced
+										</div>
+									</li>
+									<li>
+										french
+
+										<div class="rating expert">
+											basic
+										</div>
+									</li>
+								</ul>
+							</article>
+						</div>
+					</section>
+
 					<section id="portfolio">
 						<header class="major">
 							<h2>Recent projects</h2>
