fix: languages levels

--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
 									<li>
 										english
 
-										<div class="rating expert">
+										<div class="rating intermediate">
 											advanced
 										</div>
 									</li>
 									<li>
 										french
 
-										<div class="rating expert">
+										<div class="rating basic">
 											basic
 										</div>
 									</li>
