fix: language levels

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 									<li>
 										english
 
-										<div class="rating intermediate">
+										<div class="rating advanced">
 											advanced
 										</div>
 									</li>
