fix: print optimization

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
 					<section id="Web">
 						<header class="major">
-							<h2>Web skills&amp;experience</h2>
+							<h2>Other skills&amp;experience</h2>
 						</header>
 
 						<h3>Languages</h3>
@@ -528,6 +528,7 @@
 						<li><a href="https://www.xing.com/profile/Julian_Hundeloh" class="icon fa-xing"><span class="label">XING</span></a></li>
 						<li><a href="https://www.linkedin.com/in/julian-hundeloh-066b5160" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#getInTouch" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="//FreeHTMLtoPDF.com/?convert" class="icon fa-file-pdf-o"><span class="label">Download as PDF</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; hundeloh consulting 2017</li>
