fix: disable submit button after sending

--- a/index.html
+++ b/index.html
@@ -476,8 +476,7 @@
 						</p>
 						<div class="row">
 							<div class="8u 12u$(small) no-print">
-								<form method="post" action="https://formspree.io/julian@hundeloh-consulting.ch">
-								<input type="submit" text="Submit" />
+								<form method="post" action="#">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="Name" placeholder="Name" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="Email" placeholder="Email" /></div>
