feat: removed Formspree

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 						</p>
 						<div class="row">
 							<div class="8u 12u$(small) no-print">
-								<form id="Form" method="post" action="https://formspree.io/julian@hundeloh-consulting.ch">
+								<form id="Form" method="post" action="#">
 									<input type="hidden" name="_subject" value="Contact Form" />
 
 									<div class="row uniform 50%">
