--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!--
 	Credits:
 
-		Template:
+		Inspired by:
 			Strata by HTML5 UP (html5up.net | @ajlkn)
 
-		Demo Images:
+		Images:
 			Unsplash (unsplash.com)
 
 		Icons:
@@ -94,7 +94,7 @@
 							<article class="12u 12u$(xsmall) rating-container">
 								<ul>
 									<li>
-										UI5
+										SAPUI5
 
 										<div class="rating expert">
 											expert
@@ -108,20 +108,6 @@
 										</div>
 									</li>
 									<li>
-										OData Services
-
-										<div class="rating expert">
-											expert
-										</div>
-									</li>
-									<li>
-										CRM WebClient UI
-
-										<div class="rating expert">
-											expert
-										</div>
-									</li>
-									<li>
 										ABAP Reports
 
 										<div class="rating expert">
@@ -129,7 +115,21 @@
 										</div>
 									</li>
 									<li>
-										HANA Modelling&amp;Development
+										OData (Gateway and XSA)
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										SAP CRM WebClient UI
+
+										<div class="rating expert">
+											expert
+										</div>
+									</li>
+									<li>
+										SAP HANA (e.g., Modeling, CDS)
 
 										<div class="rating expert">
 											expert
@@ -202,8 +202,8 @@
 									<li>
 										SAP ScreenPersonas
 
-										<div class="rating intermediate">
-											intermediate
+										<div class="rating expert">
+											expert
 										</div>
 									</li>
 									<li>
