--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 						</header>
 
 						<ul class="ellipsis">
-							<li>a lead developer who can guide a team of (distributed) developers to success while communicating the project status clearly?</li>
-							<li>an SAP expert with excellent cross-functional skills to conceptualize and implement applications in a team or alone?</li>
+							<li>a lead developer who can independently guide a team of (distributed) developers to success?</li>
+							<li>an SAP expert with excellent cross-topic skills to plan and implement applications in a team or alone?</li>
 							<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform who helps your team to get into gear?</li>
 							<li>a trainer for developer or end-user trainings?</li>
-							<li>a JavaScript expert who knows how to implement performant client but as well server applications?</li>
+							<li>a JavaScript expert who knows how to implement performant client and server applications?</li>
 							<li>a cross topic expert who can identify performance or security potential in your applications?</li>
 						</ul>
 
@@ -172,7 +172,7 @@
 							<article class="12u$ 12u$(xsmall) rating-container">
 								<ul>
 									<li>
-										SAP NetWeaver Gateway
+										SAP Gateway
 
 										<div class="rating expert">
 											expert
@@ -438,7 +438,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<h3>Hybrid Requisition Approvals</h3>
 								<p>
-									<strong>Lead Developer and Coach</strong> of a packaged <a href="https://fioriappslibrary.hana.ondemand.com/sap/fix/externalViewer/#/detail/Apps('F0401')/W13">Approve Requisitions</a> Fiori application at the largest telecommunication company on the Philippines.
+									<strong>Lead Developer and Coach</strong> of a packaged <a href="https://fioriappslibrary.hana.ondemand.com/sap/fix/externalViewer/#/detail/Apps('F0401')/W13">Approve Requisitions</a> Fiori application at the largest telecommunication company of the Philippines.
 									The application is wrapped in a SAP Fiori Client and targets iOS and Android devices.
 									Custom adaptions of the SAP Fiori Client were necessary to support custom SAML authentication behaviour and to have an offline mode while using the application in remote locations.
 								</p>
@@ -450,7 +450,7 @@
 								<h3>KPI Dashboard on SAP CP</h3>
 								<p>
 									<strong>Lead Developer</strong> of an high performant KPI dashboard application for board members of one of the biggest insurance companies in the world.
-									This Fiori application uses exposed OData services of an HANA back-end on SAP Cloud Platform.
+									This Fiori application makes use of OData services exposed via HANA XS on SAP Cloud Platform.
 								</p>
 							</article>
 
@@ -471,7 +471,7 @@
 						</header>
 
 						<p>
-							Ready to discuss your next project?
+							Ready to discuss your next project? I am available for both on-site and remote jobs.
 							<span class="no-print">Please use the form below and I will get back to you immediately.</span>
 						</p>
 						<div class="row">
@@ -508,10 +508,12 @@
 										4056 Basel<br />
 										Switzerland
 									</li>
+									<!--
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
 										+41 79 512 98 46
 									</li>
+									-->
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
 										<a href="#getInTouch" class="email">hc.gnitlusnoc-holednuh@nailuj</a>
