--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<h3>AP Invoice Processing</h3>
 								<p>
-									<strong>Lead Developer</strong> of a lighthouse project that combines SAP Fiori and SAP Screen Personas in parallel in order to increase the efficiency of the invoice processing processes at the largest food company in the world.
-									Additionally, Smart Business applications with custom SAP HANA views were developed.
+									<strong>Lead Developer</strong> of a lighthouse project that combines SAP Fiori and SAP Screen Personas in parallel in order to increase the efficiency of invoice processing processes at the largest food company in the world.
+									Additionally, for analytical purposes SAP Smart Business applications with custom SAP HANA views were developed.
 								</p>
 							</article>
 
@@ -517,6 +517,10 @@
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
 										<a href="#getInTouch" class="email">hc.gnitlusnoc-holednuh@nailuj</a>
+									</li>
+									<li class="only-print">
+										<h3 class="icon fa-globe"><span class="label">Email</span></h3>
+										<a href="http://www.hundeloh-consulting.ch/">hundeloh-consulting.ch</a>
 									</li>
 								</ul>
 							</div>
