--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h1>
 						I am <strong>Julian Hundeloh</strong>,<br />
 						a passionate SAP and full-stack developer
-						with focus on <abbr title="Customer Relationship Management">CRM</abbr>, <abbr title="User Experience">UX</abbr> and Mobility.
+						with focus on SAP <abbr title="Customer Relationship Management">CRM</abbr>, <abbr title="User Experience">UX</abbr> and Mobility.
 					</h1>
 				</div>
 			</header>
@@ -129,7 +129,7 @@
 										</div>
 									</li>
 									<li>
-										SAP HANA (e.g., Modeling, CDS)
+										SAP HANA (e.g., modeling, CDS)
 
 										<div class="rating expert">
 											expert
@@ -471,7 +471,7 @@
 						</header>
 
 						<p>
-							Ready to discuss your next project? I am available for both on-site and remote jobs.
+							Ready to discuss your next project? I am available for both on-site (preferrably in Switzerland or Germany) and remote jobs.
 							<span class="no-print">Please use the form below and I will get back to you immediately.</span>
 						</p>
 						<div class="row">
