fix: Fiori / UI5

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<article class="12u 12u$(xsmall) rating-container">
 								<ul>
 									<li>
-										SAPUI5
+										SAP Fiori / SAPUI5
 
 										<div class="rating expert">
 											expert
