fix: remove contact form

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
 			<p>
 				Ready to discuss your next project? I am available for both on-site (preferrably in Switzerland or Germany) and remote jobs.
-				<span class="no-print">Please use the form below and I will get back to you immediately.</span>
+				<!--<span class="no-print">Please use the form below and I will get back to you immediately.</span>-->
 			</p>
 			<div class="row">
 				<!--
