fix: remove link from email

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 						</li>
 						<li>
 							<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-							<a href="#getInTouch" class="email">hc.gnitlusnoc-holednuh@nailuj</a>
+							<span class="email">hc.gnitlusnoc-holednuh@nailuj</span>
 						</li>
 						<li class="only-print">
 							<h3 class="icon fa-globe"><span class="label">Email</span></h3>
@@ -572,7 +572,7 @@
 				<li><a href="CV_JulianHundeloh.pdf" target="_blank" class="icon fa-file-pdf-o"><span class="label">Download as PDF</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; hundeloh consulting 2017</li>
+				<li>&copy; hundeloh consulting 2020</li>
 			</ul>
 		</div>
 	</footer>
