fix: fix address

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 					<ul class="labeled-icons">
 						<li>
 							<h3 class="icon fa-home"><span class="label">Address</span></h3>
-							Gasstrasse 8<br /> 4056 Basel<br /> Switzerland
+							An der hohlen Gasse 25<br /> 4058 Basel<br /> Switzerland
 						</li>
 						<li>
 							<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
