--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1>
-				I am <strong>Julian Hundeloh</strong>,<br /> a passionate SAP and full-stack developer with focus on SAP <abbr title="Customer Relationship Management">CRM</abbr>,
-				<abbr title="User Experience">UX</abbr> and Mobility.
+				I am <strong>Julian Hundeloh</strong>,<br /> a passionate SAP and full-stack developer with focus on <abbr title="User Experience">UX</abbr> and Mobility.
 			</h1>
 		</div>
 	</header>
@@ -120,7 +119,7 @@
 							</div>
 						</li>
 						<li>
-							OData (Gateway and XSA)
+							OData
 
 							<div class="rating expert">
 								expert
@@ -136,8 +135,8 @@
 						<li>
 							SAP HANA (e.g., modeling, CDS)
 
-							<div class="rating expert">
-								expert
+							<div class="rating intermediate">
+								intermediate
 							</div>
 						</li>
 						<li>
@@ -191,21 +190,7 @@
 							</div>
 						</li>
 						<li>
-							SAP Cloud Platform (incl. Cloud Connector)
-
-							<div class="rating expert">
-								expert
-							</div>
-						</li>
-						<li>
-							SAP Mobile Platform (incl. KapselSDK)
-
-							<div class="rating expert">
-								expert
-							</div>
-						</li>
-						<li>
-							SAP ScreenPersonas
+							SAP BTP
 
 							<div class="rating expert">
 								expert
@@ -261,7 +246,7 @@
 				<article class="12u 12u$(xsmall) rating-container">
 					<ul>
 						<li>
-							JavaScript (incl. ES6)
+							JavaScript
 
 							<div class="rating expert">
 								expert
@@ -275,7 +260,7 @@
 							</div>
 						</li>
 						<li>
-							CSS (incl. LESS and SASS)
+							CSS
 
 							<div class="rating expert">
 								expert
@@ -299,14 +284,14 @@
 							C#
 
 							<div class="rating expert">
-								expert
+								intermediate
 							</div>
 						</li>
 						<li>
-							Visual Basic
+							Python
 
 							<div class="rating expert">
-								expert
+								intermediate
 							</div>
 						</li>
 						<li>
@@ -332,7 +317,7 @@
 							</div>
 						</li>
 						<li>
-							<a href="https://angularjs.org/">AngularJS</a>
+							<a href="https://vuejs.org/">Vue.js</a>
 
 							<div class="rating expert">
 								expert
@@ -412,11 +397,11 @@
 
 			<div class="row">
 				<article class="6u 12u$(xsmall) work-item">
-					<h3>AP Invoice Processing</h3>
+					<h3>My Approvals</h3>
 					<p>
-						<strong>Lead Developer</strong> of a lighthouse project that combines SAP Fiori and SAP Screen Personas in parallel
-						in order to increase the efficiency of invoice processing processes at the largest food company in the world. Additionally,
-						for analytical purposes SAP Smart Business applications with custom SAP HANA views were developed.
+						<strong>Lead Developer and Architect</strong> of an extensive framework for a custom <a href="https://fioriappslibrary.hana.ondemand.com/sap/fix/externalViewer/#/detail/Apps('F0862')/S7OP">My Inbox</a>						Fiori application that is designed to be a one stop shop for approvals in one of the largest pharma companies of the
+						world. Part of the project was also a custom UI5 template framework that supports different views for different types
+						of approvals. Additional proof of concepts were implemented to have push notifications and offline capability.
 					</p>
 				</article>
 
@@ -433,11 +418,11 @@
 
 			<div class="row">
 				<article class="6u 12u$(xsmall) work-item">
-					<h3>My Approvals</h3>
+					<h3>AP Invoice Processing</h3>
 					<p>
-						<strong>Lead Developer and Architect</strong> of an extensive framework for a custom <a href="https://fioriappslibrary.hana.ondemand.com/sap/fix/externalViewer/#/detail/Apps('F0862')/S7OP">My Inbox</a>						Fiori application that is designed to be a one stop shop for approvals in one of the largest pharma companies of the
-						world. Part of the project was also a custom UI5 template framework that supports different views for different types
-						of approvals. Additional proof of concepts were implemented to have push notifications and offline capability.
+						<strong>Lead Developer</strong> of a lighthouse project that combines SAP Fiori and SAP Screen Personas in parallel
+						in order to increase the efficiency of invoice processing processes at the largest food company in the world. Additionally,
+						for analytical purposes SAP Smart Business applications with custom SAP HANA views were developed.
 					</p>
 				</article>
 
@@ -475,7 +460,7 @@
 		<section id="history">
 			<header class="major">
 				<h2>
-					Employment history
+					Previous employment history
 				</h2>
 			</header>
 
@@ -510,7 +495,7 @@
 			</header>
 
 			<p>
-				Ready to discuss your next project? I am available for both on-site (preferrably in Switzerland or Germany) and remote jobs.
+				Ready to discuss your next project? I am available any time for remote jobs.
 				<!--<span class="no-print">Please use the form below and I will get back to you immediately.</span>-->
 			</p>
 			<div class="row">
