--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<ul class="ellipsis">
 				<li>a lead developer who can independently guide a team of (distributed) developers to success?</li>
 				<li>an SAP expert with excellent cross-topic skills to plan and implement applications in a team or alone?</li>
-				<li>a certified coach for SAP Fiori, SAP Gateway, SAP CRM, SAP HANA or SAP Cloud Platform who helps your team to get into
+				<li>a coach for SAP Fiori, SAP Gateway or SAP BTP who helps your team to get into
 					gear?
 				</li>
 				<li>a trainer for developer or end-user trainings?</li>
