feat: extend employment history

--- a/index.html
+++ b/index.html
@@ -460,6 +460,19 @@
 
         <div class="row work-item">
           <article class="12u">
+            <p>July 2017 - now</p>
+            <h3>
+              Full-stack developer with focus on UX and Mobility
+            </h3>
+            <p>
+              at <a target="_blank" href="https://www.hundeloh-consulting.ch/">hundeloh consulting GmbH</a> in
+              Basel, Switzerland
+            </p>
+          </article>
+				</div>
+
+        <div class="row work-item">
+          <article class="12u">
             <p>September 2014 - June 2017</p>
             <h3>
               SAP Technology Consultant for Mobile Solutions and User Experience
